[gd_scene load_steps=6 format=2]

[ext_resource path="res://texture/plot/daughter/daughter_3.png" type="Texture" id=1]
[ext_resource path="res://texture/plot/daughter/daughter_4.png" type="Texture" id=2]
[ext_resource path="res://texture/plot/daughter/daughter_2.png" type="Texture" id=3]
[ext_resource path="res://texture/plot/daughter/daughter_1.png" type="Texture" id=4]
[ext_resource path="res://script/plot/daughter.gd" type="Script" id=5]

[node name="daughter" type="Node2D"]
position = Vector2( -8, 0 )
script = ExtResource( 5 )

[node name="daughter_1" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="daughter_2" type="Sprite" parent="."]
position = Vector2( 8, 0 )
texture = ExtResource( 3 )

[node name="daughter_3" type="Sprite" parent="."]
position = Vector2( -8, 0 )
texture = ExtResource( 1 )

[node name="daughter_4" type="Sprite" parent="."]
position = Vector2( -8, 0 )
texture = ExtResource( 2 )
